jboot v2.0-rc.8:
新增：Limit模块，可以用于没有运维的时候进行代码配置限流和降级
新增：WebSocketEndpoint 的配置支持 jboot.web.webSocketEndpoint
新增：undertow.unHotSwapClassPrefix 配置的支持，用于排除某些类在RPC下热加载的问题
优化：统一 JbootAppListener 的方法名，详情：https://gitee.com/fuhai/jboot/blob/v2.0/doc/docs/upgrade.md#%E4%BF%AE%E6%94%B9-jbootapplistener-%E7%9A%84%E6%96%B9%E6%B3%95%E5%90%8D
修复：修复由于升级 JFinal 到 v3.6 后，导致 sql 模板无法正常加载的问题
移除：ActionCache 模块，JFinal内部已经提供了类似功能


jboot v2.0-rc.7:
修复：Aop 自动注入的一些问题，提升 Aop 性能
修复：修复 jboot.properties 无法读取mode文件扩展的问题
优化：当未配置端口号（undertow.port）的时候，默认端口号为：8080
优化：@ConfigInject 修改为 @ConfigValue 并新增 requireNullOrBlank 配置，当读取配置文件为空的时候，是否进行强行赋值。


jboot v2.0-rc.6:
优化：把 JbootModel 的 `getIdValue()` 修改为 `_getIdValue()`，防止fastjson自动序列化会调用 get 方法出错的问题
修复：JbootModel 通过 RPC 请求数据返回客户端，然后进行 equals 会出错的问题


jboot v2.0-rc.4:
新增：注解可以通过${key}来指定读取配置的功能，支持 ${key:value} 的方式设置默认值
新增：@Inject 对配置 Model 自动注入的支持，配置 Model 应该是通过 ConfigManager 来进行初始化
新增：@ConfigInject 可以通过 @ConfigInject(key:value) 的方式进行配置，当key不存在的时候，自动使用value进行赋值
新增：onJFinalStartedBefore() 监听，可以在项目启动的时候做一些必须的初始化
新增：JbootActionHandler 新增 getAction() 方法，方便子类复写从而可以实现 "动态路由" 和 Controler 的动态添加功能
新增：工具类 FileScanner，用于对文件进行扫描和监听文件动态
新增：JbootResourceLoader，用于在 Maven 多 Module 的情况下自动对资源文件进行热加载
新增：JFinalHandlers 添加 getHandlers() 和 setActionHandler() 方法
新增：Columns 新增 or() 方法的支持，用于添加 Sql 的 OR 逻辑
新增：新增工具类 WeightUtil 用于对默认 监听器进行排序
新增：jboot.app.scanner 配置，用于对 jboot 类扫描器进行配置
优化：升级 JFinal 到 3.6 最新版本
优化：升级 JFinal-Undertow 到 1.5 最新版本
优化：升级 JFinal-Weixin 到 2.3 最新版本
优化：修改 JbootAppListener 的 onJfinalStarted() 为 onJfinalStart() ，保持和JFinal 3.6 一致
优化：save() 和 saveOrUpdate() 方法返回 Object，Object 是 Model 的主键值，方便 RPC 调用
优化：增强 SPI 功能，当未在 META-INF 定义 Service 接口的时候，可以进行 SPI 发现
优化：优化通过 Column 和 Columns 查询的时候，生成 Sql 的代码逻辑，增强性能
优化：JbootHttpKit 重命名为 HttpUtil、新增 handle() 方法，方便自定义任何的 Http 请求
优化：重命名代码生成器的模板文件，以 .tp 结尾
优化：修改资源文件路径，默认为 classPath 下的 webapp，方便多 maven module 进行热加载
优化：修改 JbootPaginateDirective 分页指令为 非抽象类，有默认设置，支持复写
优化：删除 @EventConfig 的 weight 属性，统一用 @Weight 来处理