@@ -1,3 +1,7 @@
+jboot v2.0-rc.9:
+修复：通过配置文件设置 DbProFactory 无效的问题
+
+
 jboot v2.0-rc.8:
 新增：Limit模块，可以用于没有运维的时候进行代码配置限流和降级
 新增：WebSocketEndpoint 的配置支持 jboot.web.webSocketEndpoint
